2012-11-27  Min Qin  <qinmin@chromium.org>

        Don't throw an exception if user gesture is required for load
        https://bugs.webkit.org/show_bug.cgi?id=103318

        Reviewed by Eric Carlson.

        Check that exception is not thrown and metadata is not loaded if media load requires user gesture.

        * media/video-load-require-user-gesture-expected.txt:
        * media/video-load-require-user-gesture.html:

2012-11-27  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Unreviewed gardening, skip a new failing test to paint the bots green.

        * platform/qt/TestExpectations:

2012-11-27  Justin Novosad  <junov@google.com>

        Correcting baseline for fast/backgrounds/background-opaque-images-over-color.html
        https://bugs.webkit.org/show_bug.cgi?id=103275

        Unreviewed

        Fixing small error in ref test baseline.

        * fast/backgrounds/background-opaque-images-over-color-expected.html:

2012-11-27  Justin Novosad  <junov@google.com>

        Convert test fast/backgrounds/background-opaque-images-over-color.html to a ref test
        https://bugs.webkit.org/show_bug.cgi?id=103275

        Reviewed by Simon Fraser

        Removing existing baselines, and adding an -expecte.html to make
        fast/backgrounds/background-opaque-images-over-color.html a ref test

        * fast/backgrounds/background-opaque-images-over-color-expected.html: Added.
        * fast/backgrounds/background-opaque-images-over-color-expected.txt: Removed.
        * fast/backgrounds/background-opaque-images-over-color.html:
        * platform/chromium-mac/fast/backgrounds/background-opaque-images-over-color-expected.png: Removed.
        * platform/chromium-win/fast/backgrounds/background-opaque-images-over-color-expected.png: Removed.

2012-11-27  Jussi Kukkonen  <jussi.kukkonen@intel.com>

        [EFL] Mark tests flaky
        https://bugs.webkit.org/show_bug.cgi?id=103403
